<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/march"
    tools:background="@mipmap/march"
    tools:context="com.roszyk.maksymilian.biblioteka.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dk_header"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btndodaj_ksiazke"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/bi_button"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="22dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_ksiazka_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_ksiazka_autor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ki_label_dodaj_autora"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_ksiazka_tytul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_ksiazka_tytul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ki_label_dodaj_tytul"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_ksiazka_strony"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_ksiazka_strony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ki_label_dodaj_strony"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_ksiazka_datawydania"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_ksiazka_datawydania"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ki_label_dodaj_datawydania"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_ksiazka_gatunek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_ksiazka_gatunek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ki_label_dodaj_gatunek"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_input_ksiazka_opis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_ksiazka_opis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ki_label_dodaj_opis"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/input_przeczytana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ki_label_checkbox" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
